--- a/icecream.html
+++ b/icecream.html
@@ -1,258 +1,316 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="../style/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Hind&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bubbler+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Leckerli+One&display=swap" rel="stylesheet">
 <style>
-    .104_156 { 
-	overflow:hidden;
+/* ILP Turn off parallax scrolling for tablets and phones */
+/* @media only screen and (max-device-width: 1600px) {
+  body {
+    background-attachment: scroll;
+    min-height: 400px;
+  }
+} */
+/* small screen */
+@media only screen and (max-width: 540px) {
+	body, html {
+    background-image:url(images/bg359_438.png);
+    background-repeat:no-repeat;
+    background-color: #83bd86;
+    background-position: center;
+    min-height: 100%; 
+	} 
+	.w3-container, .w3-panel {padding: 0em 0px;}
+	.w3-button:hover {color:#000;cursor:pointer;}
+	.header {font-size:40px;;display: inline-flex;margin-left: 20px!important;margin-right: 20px!important;margin-top: 30px!important;}
+	.sub_header {font-size:26px;margin-left: 25px!important;margin-right: 20px!important;}
+	.main_body{margin-left:0px!important;margin-top: 0px!important;}
+	.latin{font-size:16px;}
+	.button_text{font-size:14px;}
+	.latin_div{padding:10px!important;align-self: auto!important;width: 100%!important;text-align: left;}
+	.main_body{margin-left: 20px!important;margin-right:20px!important;}		
 }
-.e104_156 { 
-	width:1460px;
-	height:1044px;
-	position:absolute;
+/* medium screen */
+@media only screen and (min-width:541px) and (max-width:912px) {
+    body, html {
+    background-image:url(images/bg800_660.png);
+    background-repeat:no-repeat;
+    background-color: #83bd86; 
+    /* background-attachment: fixed; */
+    min-height: 100%;} 
+	.w3-button:hover {color:#000;background-color:#e7ffb2!important;cursor:pointer;}
+    .header {font-size:64px;}
+	.sub_header {font-size:40px;}
+	.latin{font-size:20px;}
+	.latin_div{width:55%!important;}
+	.button_text{font-size:18px;}
+	.w3-content {
+		margin-left: 20px!important;
+		margin-right: 20px!important;
+	}
 }
-.e103_101 { 
-	width:1460px;
-	height:1044px;
-	position:absolute;
-	left:0px;
-	top:0px;
+/* large screen */
+@media only screen and  (min-width: 913px)  {
+	body, html {
+	background-image:url(images/bg1440_1024.png);
+    background-repeat:no-repeat;
+    background-color: #83bd86; 
+    /* background-attachment: fixed; */
+    background-repeat: no-repeat;
+    /* min-height: 100%; */
+    } 
+	.w3-button:hover {color:#000;background-color:#e7ffb2!important;cursor:pointer;}
+	.header {font-size:80px;}
+	.sub_header {font-size:64px;}
+	.latin{font-size:24px;}
+	.button_text{font-size:18px;}	
+	.latin_div{margin-top:120px!important;width:55%!important;}
 }
-.e103_99 { 
-	width:1440px;
-	height:1024px;
-	position:absolute;
-	left:10px;
-	top:10px;
-	background-image:url(images/background.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.nav { 
-	width:504px;
-	height:38px;
-	position:absolute;
-	left:718px;
-	top:47px;
-}
-.e103_87 { 
-	width:504px;
-	height:38px;
-	position:absolute;
-	left:0px;
-	top:0px;
-}
-.e102_66 { 
+
+/*navegation*/
+.w3-menubar-item {
 	color:rgba(0, 0, 0, 1);
-	width:65px;
-	height:38px;
-	position:absolute;
+    top:10px;
+    font-family:Hind;
+    text-align:left;
+    font-size:20px;
+    letter-spacing:0;
 	left:0px;
-	top:0px;
-	font-family:Hind;
-	text-align:left;
-	font-size:24px;
-	letter-spacing:0;
+    top:0px;
 }
-.e102_69 { 
-	color:rgba(0, 0, 0, 1);
-	width:97px;
-	height:38px;
-	position:absolute;
-	left:175px;
-	top:0px;
-	font-family:Hind;
-	text-align:left;
-	font-size:24px;
-	letter-spacing:0;
+a {
+    text-decoration: none;
+    color:rgba(0, 0, 0, 1);
 }
-.e102_70 { 
-	color:rgba(0, 0, 0, 1);
-	width:122px;
-	height:38px;
-	position:absolute;
-	left:382px;
-	top:0px;
-	font-family:Hind;
-	text-align:left;
-	font-size:24px;
-	letter-spacing:0;
-}
-.e103_82 { 
-	width:538px;
+.main_body { 
+	margin-left:32px;
+	margin-bottom: 100px;
+	/* margin-top:39px; */
+	/* width:538px;
 	height:909px;
 	position:absolute;
 	left:32px;
-	top:39px;
+	top:39px; */
+
+    /* align-items: center; ????????????????*/
+	
+	
+	/* padding-top:39px;
+	padding-left:32px; */
 }
-.e102_63 { 
+.w3-content .w3-container{ 
+	width:100%;
+	left:10px;
+	top:10px;	
+}
+.company { 
 	color:rgba(0, 0, 0, 1);
-	width:419px;
+	/* width:419px;
 	height:81px;
-	position:absolute;
-	left:0px;
-	top:0px;
+	position:absolute; */
+	/* left:0px;
+	top:0px; */
 	font-family:Bubbler One;
 	text-align:left;
 	font-size:64px;
 	letter-spacing:0;
 }
-.e102_64 { 
+.motto { 
 	color:rgba(255, 255, 255, 1);
-	width:311px;
+	/* width:311px;
 	height:84px;
-	position:absolute;
-	left:0px;
-	top:103px;
+	position:absolute; */
+	/* left:0px;
+	top:103px; */
 	font-family:Poppins;
 	text-align:left;
 	font-size:32px;
 	letter-spacing:0;
 }
-.e102_67 { 
+.header{ 
 	color:rgba(217.8125050663948, 84.40234780311584, 111.53659299015999, 1);
-	width:497px;
-	height:246px;
-	position:absolute;
+	/* width:497px;
+	height:246px; */
+	/* position:absolute;
 	left:0px;
-	top:209px;
+	top:209px; */
 	font-family:Leckerli One;
 	text-align:left;
-	font-size:80px;
+	/* font-size:80px; */
 	letter-spacing:0;
 }
-.e102_68 { 
+.sub_header{ 
 	color:rgba(17.00000088661909, 41.00000135600567, 4.000000236555934, 1);
-	width:538px;
-	height:70px;
-	position:absolute;
+	/* width:538px;
+	height:70px; */
+	/* position:absolute;
 	left:0px;
-	top:477px;
+	top:477px; */
 	font-family:Leckerli One;
 	text-align:left;
-	font-size:64px;
+	/* font-size:64px; */
 	letter-spacing:0;
+	margin-top:10px;
 }
-.e102_76 { 
-	width:502px;
+.latin_div { 
+	/* width:502px;
 	height:248px;
 	position:absolute;
 	left:0px;
-	top:569px;
+	top:569px; */
+	/* margin-right:12px; */
+	/* margin-top:50px;	 */
+	width:80%;
+	display: flex;
+    flex-wrap: wrap;
 }
-.e102_75 { 
+.latin { 
 	color:rgba(0, 0, 0, 1);
-	width:482px;
-	height:228px;
-	position:absolute;
+	/* width:482px;
+	height:228px; */
+	/* position:absolute;
 	left:10px;
-	top:10px;
+	top:10px; */
 	font-family:Hind;
 	text-align:left;
-	font-size:24px;
+	/* font-size:24px; */
 	letter-spacing:0;
 }
-.e103_86 { 
-	width:445px;
+.buttons_div { 
+	padding:20px 0px 20px 0px;
+	/* width: 212px;	
+	padding:20px; */
+	/* max-width: 212px;
+	min-height:auto; */
+	/* width:100%; */
+	/* max-height:70px;
+	min-height: auto; */
+	/* position:absolute;
+	left:0px;
+	top:839px; */
+}
+.cell_buttons_div { 
+	margin:0px;
+	padding:20px 0px 20px 0px;
+	background-color: black;	
+	/* width: 212px;	
+	padding:20px; */
+	/* max-width: 212px;
+	min-height:auto; */
+	/* width:100%; */
+	/* max-height:70px;
+	min-height: auto; */
+	/* position:absolute;
+	left:0px;
+	top:839px; */
+}
+.left_button { 
+	background-color:rgba(243.00000071525574, 211.00000262260437, 56.000000461936, 1);	
+}
+.right_button { 
+	background-color:rgba(255, 255, 255, 1);	
+}
+.button_adj {
+	height:70px!important;
+	padding:15px;
+	/* width:212px;
 	height:70px;
 	position:absolute;
 	left:0px;
-	top:839px;
-}
-.e103_85 { 
-	background-color:rgba(243.00000071525574, 211.00000262260437, 56.000000461936, 1);
-	width:212px;
-	height:70px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-top-left-radius:21px;
-	border-top-right-radius:21px;
-	border-bottom-left-radius:21px;
-	border-bottom-right-radius:21px;
-}
-.103_85 { 
-	border:3px solid rgba(255, 255, 255, 1);
-}
-.e102_78 { 
-	width:170px;
-	height:56px;
-	position:absolute;
-	left:21px;
-	top:7px;
-}
-.e102_73 { 
-	color:rgba(17.00000088661909, 41.00000135600567, 4.000000236555934, 1);
-	width:150px;
-	height:36px;
-	position:absolute;
-	left:10px;
-	top:10px;
-	font-family:Poppins;
-	text-align:left;
-	font-size:24px;
-	letter-spacing:0;
-}
-.e103_84 { 
-	background-color:rgba(255, 255, 255, 1);
-	width:209px;
-	height:70px;
-	position:absolute;
-	left:236px;
-	top:0px;
-	border-top-left-radius:21px;
-	border-top-right-radius:21px;
-	border-bottom-left-radius:21px;
-	border-bottom-right-radius:21px;
-}
-.e102_77 { 
-	width:151px;
-	height:56px;
-	position:absolute;
-	left:29px;
-	top:7px;
-}
-.e102_74 { 
-	color:rgba(17.00000088661909, 41.00000135600567, 4.000000236555934, 1);
-	width:131px;
-	height:36px;
-	position:absolute;
-	left:10px;
-	top:10px;
-	font-family:Poppins;
-	text-align:left;
-	font-size:24px;
-	letter-spacing:0;
-}
-a {
-    text-decoration: none;
-    color:black;
-}
-body {background-color: 83bd86;;}
+	top:0px; */
 
+	border:3px solid;
+	border-color:#fff;
+	text-align: center;
+	border-top-left-radius:21px;
+	border-top-right-radius:21px;
+	border-bottom-left-radius:21px;
+	border-bottom-right-radius:21px;
+}
+.button_text { 
+	color:rgba(17.00000088661909, 41.00000135600567, 4.000000236555934, 1);
+	/* height:36px; */
+	/* width:131px;
+	height:36px;
+	position:absolute;
+	left:10px;
+	top:10px; */
+	font-family:Poppins;
+	text-align:center;
+	/* font-size:24px; */
+	letter-spacing:0;
+}
+.cell_body{margin-left:0px;margin-right:0px;/*padding:0px;*/margin-top: 0px!important;padding-top: 180px!important;text-align: center;text-align:center;}	
+</style>
+<style>
+	 .w3-button { padding-inline:20px;}
+	/* .w3-button:hover {
+		color: #000!important;
+		cursor: pointer;
+		background-color: #fff!important; 
+    } */
+	.w3-button a:hover {background-color: red;}
+	.w3-bar-block .w3-bar-item {padding: 8px 4px 8px 4px;}
+	.w3-display-topright {padding: 0px!important;}
+	
+     /*background-color: #ccc!important;*/}
 </style>
 </head>
 <body>
-    <div class=e104_156>
-        <div class=e103_101>
-          <div class="e103_99"></div>
-        </div>
-        <div class="nav">
-          <div class=e103_87><span  class="e102_66"><a href="">home</a></span><span  class="e102_69"><a href="">flavors</a></span><span  class="e102_70"><a href="">locations</a></span></div>
-        </div>
-        <div class=e103_82><span  class="e102_63">buzzcream</span><span  class="e102_64">FAVE TASTE</span><span  class="e102_67">Buzz your tastebuds</span><span  class="e102_68">not the calories</span>
-          <div class=e102_76><span  class="e102_75">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a turpis massa. Maecenas vel sapien hendrerit nisl aliquet elementum ac in erat. o nec fringilla. Maecenas varius vel porta.</span></div>
-          <div class=e103_86>
-            <div class=e103_85>
-              <div class=e102_78><a href=""><span  class="e102_73">book tasting</span></a></div>
-            </div>
-            <div class=e103_84>
-              <div class=e102_77><a href=""><span  class="e102_74">buzz menu</span></a></div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="w3-content w3-container">
+		<!-- navbar small screens -->
+		<div class="w3-display-topright">
+			<div class="w3-bar" id="myNavbar"><!-- needs to have the w3-left so it is visible-->
+				<a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+					<i class="fa fa-bars"></i>
+				</a>
+			</div>		
+			<div id="navSmall" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-left">
+				<a href="#flavors" class="w3-bar-item w3-button">FLAVORS</a>
+				<a href="#locations" class="w3-bar-item w3-button">LOCATIONS</a>
+				<a href="#" class="w3-bar-item w3-button">SEARCH</a>
+			</div> 
+		</div><!-- // small screens -->
+		<!-- navbar medium & large screens -->
+		<div class="w3-top">						
+			<div class="w3-menubar">				
+				<a class="w3-menubar-item w3-button w3-hide-small" href="#">HOME</a>
+				<a class="w3-menubar-item w3-button w3-hide-small" href="#">FLAVORS</a>
+				<a class="w3-menubar-item w3-button w3-hide-small" href="#">LOCATIONS</a>
+			</div>						
+		</div><!-- // large-med screens -->
+        <div class="main_body">
+			<div class="company">buzzcream</div><div  class="motto">FAVE TASTE</div>
+			<div class="header w3-hide-small">Buzz your<br/>tastebuds</div><div class="sub_header w3-hide-small">not the calories</div>		
+			<div class="latin_div w3-hide-small"><span class="latin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a turpis massa. Maecenas vel sapien hendrerit nisl aliquet elementum ac in erat. o nec fringilla. Maecenas varius vel porta.</span></div>
+			<div class="buttons_div w3-hide-small">
+				<span class="button_adj left_button"><a href="#"><span  class="button_text">book tasting</span></a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="button_adj right_button"><a href="#"><span  class="button_text">buzz menu</span></a></span>
+			</div><!-- // buttons_div -->
+        </div><!-- // main_body -->		
+    </div><!--// w3-content -->
+	<div class="cell_body w3-hide-medium w3-hide-large">
+			<div class="header">Buzz your tastebuds</div><div class="sub_header">not the calories</div>		
+			<div class="cell_buttons_div">
+				<span class="button_adj left_button"><a href="#"><span  class="button_text">book tasting</span></a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="button_adj right_button"><a href="#"><span  class="button_text">buzz menu</span></a></span>
+			</div>
+			<div class="latin_div"><span class="latin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a turpis massa. Maecenas vel sapien hendrerit nisl aliquet elementum ac in erat. o nec fringilla. Maecenas varius vel porta.</span></div>
+	</div>   
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() {
+    var x = document.getElementById("navSmall");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
 </body>
 </html>
