--- a/imageslider.html
+++ b/imageslider.html
@@ -11,8 +11,8 @@
 <body>
   <!--style="width:340px;"-->
   <img-comparison-slider >
-  <img slot="first" src="left.jpg" width="400px"/>
-  <img slot="second" src="right.jpg" width="400px"/> </img-comparison-slider>  
+  <img slot="first" src="images/left.jpg" width="400px"/>
+  <img slot="second" src="images/right.jpg" width="400px"/> </img-comparison-slider>  
 
 </body>
 </html>    
