--- a/planet.html
+++ b/planet.html
@@ -6,16 +6,16 @@
 <link rel="stylesheet" href="styles/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Hind&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bubbler+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Leckerli+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 <style>
 /* small screen */
 @media only screen and (max-width:540px) {
 	body,html {
     background-image:url(images/bg359_438_1.png);
     background-repeat:no-repeat;
-    background-color:#1b2228;
+    background-color:#202830;
     background-position:center;
     min-height:100%; 
 	} 
@@ -37,8 +37,7 @@
     body,html {
     background-image:url(images/bg800_660_1.png);
     background-repeat:no-repeat;
-    background-color:#1b2228;
-    /* background-attachment:fixed; */
+    background-color:#202830;
     min-height:100%;} 
 	.main_body{margin-left:32px!important;}
 	.w3-button:hover {color:#000;background-color:transparent!important;cursor:pointer;}
@@ -56,11 +55,10 @@
 /* large screen */
 @media only screen and (min-width:913px)  {
 	body,html {
-	background-image:url(images/bg1440_1024_1.png);
+    background-color:#202830;
+	background-image:url(images/bg1440_1024_1.png);		
     background-repeat:no-repeat;
-    background-color:#1b2228; 
 	background-position:center;
-    /* min-height:100%; */
     } 
 	.w3-button:hover {color:#000;background-color:transparent!important;cursor:pointer;}
 	.w3-menubar-item {font-size:22px!important;}
@@ -97,7 +95,7 @@ a {
 }
 .company { 
 	color:#dd5c46;	
-	font-family:Bubbler One;
+	font-family:Anton;
 	text-align:left;
 	font-size:64px;
 	letter-spacing:0;
@@ -106,18 +104,18 @@ a {
 	color:rgba(255,255,255,1);	
 	font-family:Poppins;
 	text-align:left;
-	font-size:32px;
+	font-size:25px;
 	letter-spacing:0;
 }
 .header{ 
 	color:#4bc29a;	
-	font-family:Leckerli One;
+	font-family:Josefin+Sans;
 	text-align:left;
 	letter-spacing:0;
 }
 .sub_header{ 
 	color:#a14ab8;
-	font-family:Leckerli One;
+	font-family:Open+Sans;
 	text-align:left;
 	letter-spacing:0;
 	margin-top:10px;
@@ -143,7 +141,7 @@ a {
 	background-color:#4bc29a;		
 }
 .left_button { 
-	background-color:#c89944;
+	background-color:#e47664;
 }
 .right_button { 
 	background-color:#fff;
@@ -165,7 +163,7 @@ a {
 	text-align:center;
 	letter-spacing:0;
 }
-.cell_body{margin-left:0px;margin-right:0px;margin-top:0px!important;padding-top:180px!important;text-align:center;text-align:center;}	
+.cell_body{margin-left:0px;margin-right:0px;margin-top:0px!important;padding-top:180px!important;text-align:center!important;}	
 .w3-button {padding-inline:20px;}	
 .w3-bar-block .w3-bar-item {padding:8px 4px 8px 4px;}
 .w3-display-topright {padding:0px!important;}
@@ -205,7 +203,7 @@ a {
     </div><!--// w3-content -->
 	<div class="cell_body w3-hide-medium w3-hide-large">
 		    <div style="margin-top:35px;">&nbsp;</div>
-			<div class="header">Clean your planet</div><div class="sub_header">action now</div>		
+			<div class="header">Clean your planet</div><br/><div class="sub_header">action now</div>		
 			<div class="cell_buttons_div">
 				<span class="button_adj left_button"><a href="#"><span  class="button_text">book now</span></a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="button_adj right_button"><a href="#"><span  class="button_text">options</span></a></span>
 			</div>
