--- a/dev/testform - Copy.html
+++ b/dev/testform - Copy.html
@@ -6,6 +6,41 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<script src="js/jquery.js"></script>
+<script src="js/jquery.validate.js"></script>
+<script>
+$.validator.setDefaults({
+		submitHandler: function() {
+			alert("submitted!");
+		}
+	});
+
+	$().ready(function() {
+		// validate the comment form when it is submitted
+		$("#commentForm").validate();
+
+// propose username by combining first- and lastname
+$("#username").focus(function() {
+			var firstname = $("#firstname").val();
+			var lastname = $("#lastname").val();
+			if (firstname && lastname && !this.value) {
+				this.value = firstname + "." + lastname;
+			}
+		});
+
+		//code to hide topic selection, disable for demo
+		var newsletter = $("#newsletter");
+		// newsletter topics are optional, hide at first
+		var inital = newsletter.is(":checked");
+		var topics = $("#newsletter_topics")[inital ? "removeClass" : "addClass"]("gray");
+		var topicInputs = topics.find("input").attr("disabled", !inital);
+		// show when newsletter is checked
+		newsletter.click(function() {
+			topics[this.checked ? "removeClass" : "addClass"]("gray");
+			topicInputs.attr("disabled", !this.checked);
+		});
+	});
+</script>
 <style>
 body, html {
   height: 100%;
@@ -43,6 +78,33 @@ body, html {
 </style>
 </head>
 <body>
+<!-- PHP -->
+<?php
+  // The global $_POST variable allows you to access the data sent with the POST method by name
+  // To access the data sent with the GET method, you can use $_GET
+
+  // define variables and set to empty values
+    $nameErr = $emailErr = $companyErr = $urlErr = $commentErr = "";
+    $name = $email = $company = $url = $comment = "";
+    
+    function test_input($data) {
+      $data = trim($data);
+      $data = stripslashes($data);
+      $data = htmlspecialchars($data);
+      return $data;
+    }
+
+    if ($_SERVER["REQUEST_METHOD"] == "POST") { 
+
+    $name= htmlspecialchars($_POST['Name']);
+    $name = test_input($name);
+    $email  = htmlspecialchars($_POST['Email']);
+    $email = test_input($email);
+
+    echo  $name, ' ', $email;
+    }
+  ?>
+
 <!-- Links -->
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
@@ -228,14 +290,15 @@ body, html {
      <div class="w3-content" style="max-width:700px">
         <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">GET IN TOUCH</span></h5>
         <p>Currently located in New York.</p>      
-
         <p>If you're interested in working together or have any questions about my work, please don’t hesitate to get in touch.</p>
         <p><strong>Let me know</strong> if you are interested in receiving my resume and we can talk soon.</p>
-        <form action="mailto:idoia@toluenelimited.co.uk">
-        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
-        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Company" required name="About your company"></p>
-        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
-        <p><button class="w3-button w3-black" type="submit">SEND MESSAGE</button></p>
+        <form id="commentForm" method="post" action='<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>' enctype="text/plain">          
+        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name" id="cname"></p>
+        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email" id="cemail"></p>
+        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Company" required name="About your company" id="ccompany"></p>
+        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="URL" required name="URL" id="curl"></p>
+        <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message" id="ccomment"></p>
+        <p><button class="w3-button w3-black" type="submit" value="Submit">SEND MESSAGE</button></p>
         </form>
       </div>
     </div>
@@ -244,6 +307,40 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
+  <div class="row">
+    <div class="col-sm-5 copyright">
+        <p>
+            Copyright &copy; <span id="current-year">2023</span> ILP
+        </p>
+    </div>
+    <div class="col-sm-2 top">
+        <span id="to-top">
+            <i class="fa fa-chevron-up" aria-hidden="true"></i>
+        </span>
+    </div>
+    <div class="col-sm-5 social">
+        <ul>
+            <li>
+                <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li>
+                <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+            </li>
+            <li>
+                <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+            </li>
+        </ul>
+    </div>
+</div>
   <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>-->
 </footer>
 
@@ -264,5 +361,19 @@ body, html {
     }
     document.getElementById("myLink").click();
 </script>
+
+<?php
+echo "<h2>Your Input:</h2>";
+echo $name;
+echo "<br>";
+echo $email;
+echo "<br>";
+echo $url;
+echo "<br>";
+echo $company;
+echo "<br>";
+echo $message;
+?>
+
 </body>
 </html>
