--- a/dev/testform.html
+++ b/dev/testform.html
@@ -265,7 +265,7 @@ body, html {
         <p>Currently located in New York.</p>      
         <p>If you're interested in working together or have any questions about my work, please don’t hesitate to get in touch.</p>
         <p><strong>Let me know</strong> if you are interested in receiving my resume and we can talk soon.</p>
-        <form id="commentForm" method="post" action="js/processsform.js" enctype="text/plain"> 
+        <form id="commentForm" method="post" action="js/processform.js" enctype="text/plain"> 
         <!--<form id="commentForm" method="post" action="action.php" enctype="text/plain">-->
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name" id="cname"></p>
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email" id="cemail"></p>
