--- a/dev/testform.html
+++ b/dev/testform.html
@@ -9,38 +9,47 @@
 <script src="js/jquery.js"></script>
 <script src="js/jquery.validate.js"></script>
 <script>
-$.validator.setDefaults({
-		submitHandler: function() {
-			alert("submitted!");
-		}
-	});
+  $.validator.setDefaults({
+      submitHandler: function() {
+        alert("submitted!");
+      }
+    });
+  
+  // $.validator.setDefaults({
+  // 		submitHandler: function() {
+  // 			alert("submitted!");
+  // 		}
+  // 	});
+  $("#contactForm").validate();
+  
+    $().ready(function() {
+      // validate the comment form when it is submitted
+      $("#commentForm").validate();
+  
+  // propose username by combining first- and lastname
+  $("#username").focus(function() {
+        var firstname = $("#firstname").val();
+        var lastname = $("#lastname").val();
+        if (firstname && lastname && !this.value) {
+          this.value = firstname + "." + lastname;
+        }
+      });
+      $("#contactForm").validate();
+    });
+  
+      //code to hide topic selection, disable for demo
+      var newsletter = $("#newsletter");
+      // newsletter topics are optional, hide at first
+      var inital = newsletter.is(":checked");
+      var topics = $("#newsletter_topics")[inital ? "removeClass" : "addClass"]("gray");
+      var topicInputs = topics.find("input").attr("disabled", !inital);
+      // show when newsletter is checked
+      newsletter.click(function() {
+        topics[this.checked ? "removeClass" : "addClass"]("gray");
+        topicInputs.attr("disabled", !this.checked);
+      });
 
-	$().ready(function() {
-		// validate the comment form when it is submitted
-		$("#commentForm").validate();
-
-// propose username by combining first- and lastname
-$("#username").focus(function() {
-			var firstname = $("#firstname").val();
-			var lastname = $("#lastname").val();
-			if (firstname && lastname && !this.value) {
-				this.value = firstname + "." + lastname;
-			}
-		});
-
-		//code to hide topic selection, disable for demo
-		var newsletter = $("#newsletter");
-		// newsletter topics are optional, hide at first
-		var inital = newsletter.is(":checked");
-		var topics = $("#newsletter_topics")[inital ? "removeClass" : "addClass"]("gray");
-		var topicInputs = topics.find("input").attr("disabled", !inital);
-		// show when newsletter is checked
-		newsletter.click(function() {
-			topics[this.checked ? "removeClass" : "addClass"]("gray");
-			topicInputs.attr("disabled", !this.checked);
-		});
-	});
-</script>
+  </script>
 <style>
 body, html {
   height: 100%;
@@ -265,14 +274,14 @@ body, html {
         <p>Currently located in New York.</p>      
         <p>If you're interested in working together or have any questions about my work, please don’t hesitate to get in touch.</p>
         <p><strong>Let me know</strong> if you are interested in receiving my resume and we can talk soon.</p>
-        <form id="commentForm" method="post" action="javascript:process()" enctype="text/plain"> 
-        <!--<form id="commentForm" method="post" action="action.php" enctype="text/plain">-->
+        <form id="contactForm" method="post" onsubmit="return process();" enctype="text/plain"> 
+        <!--<form id="contactForm" method="post" action="action.php" enctype="text/plain">-->
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name" id="cname"></p>
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email" id="cemail"></p>
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Company" required name="About your company" id="ccompany"></p>
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="URL" required name="URL" id="curl"></p>
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message" id="ccomment"></p>
-        <p><button class="w3-button w3-black" type="submit" value="Submit">SEND MESSAGE</button></p>
+        <p><button class="w3-button w3-black" type="submit" id="mysubmit" value="Submit">SEND MESSAGE</button></p>
         </form>
       </div>
     </div>
@@ -336,56 +345,28 @@ body, html {
     document.getElementById("myLink").click();
 </script>
 <script>
+
 function process() {
-  const core = require('@actions/core');
-  const FormData = require('form-data');
-  const fs = require('fs');
-  const axios = require('axios');
+  //const core = require('@actions/core');
+  //const FormData = require('form-data');
+  //const fs = require('fs');
+ // const axios = require('axios');
+ 
+  //console.log(document.forms["contactForm"])
+  //document.write(5 + 6);
+  document.getElementById("mysubmit").addEventListener("click", displayMessage());
 
-  async function run() {
-    try {
-      const url = core.getInput('url')
-      const headers = JSON.parse(core.getInput('headers') || '{}')
-      const data = JSON.parse(core.getInput('data') || '{}')
-      const name = core.getInput('name')
-      const file = core.getInput('file')
-
-      console.log(`URL: ${url}`)
-      console.log(`Headers: ${headers}`)
-      console.log(`Data: ${data}`)
-      console.log(`File Name: ${name}`)
-      console.log(`File Path: ${file}`)
-      core.info(`Connecting to endpoint (${url}) ...`)
-
-      const form = new FormData();
-      for (const [key, value] of Object.entries(data)) {
-        form.append(key, value)
-      }
-
-
-      if (name && file) {
-        form.append(name, fs.createReadStream(file));
-      }
-
-      const response = await axios({
-        method: 'POST',
-        url: url,
-        headers: { 'Content-Type': 'multipart/form-data', ...headers },
-        data: form,
-      })
-      
-      console.log(response)
-
-      core.setOutput('response', { 'statusCode': response.statusCode, 'data': response.data });
-    } catch (error) {
-      console.log(error)
-      core.setFailed(error.message);
-    }
-  }
-
-  run();
+  
 }
-
+function displayMessage()
+{  
+  document.write(20);  
+  const form = new FormData(document.getElementById("contactForm"));
+  fetch("/conctactForm", {
+    method: "POST",
+    body: form,
+ });
+}
 
 
 </script>
