--- a/dev/webdev.html
+++ b/dev/webdev.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="icon" type="image/x-icon" href="images/icon.png">
 <style>
 body, html {
   height: 100%;
@@ -154,7 +155,7 @@ body, html {
                 <li>Openseadragon image viewer using Microsoft deep zoom image format.</li>
                 <li>Stable diffusion image generation, artstation.</li>
                 <li>Video interpolations of latent mappings, from one image to the next, Nvdia Style GAN 2.</li>
-                <li>Kaggle, I have Kaggle account and I like to work on competition when time permits.</li>
+                <li>Kaggle, I have Kaggle account and I like to work on competitions when time permits.</li>
             </ul>
         </p>        
         </div>  
