--- a/dev/webdev.html
+++ b/dev/webdev.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
-<link rel="icon" type="image/x-icon" href="images/icon.png">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <style>
 body, html {
   height: 100%;
@@ -256,7 +256,7 @@ body, html {
             <i class="fa fa-chevron-up" aria-hidden="true"></i>
         </span>
     </div>
-    <div class="col-sm-5 social">
+    <!-- <div class="col-sm-5 social">
         <ul>
             <li>
                 <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -277,7 +277,7 @@ body, html {
                 <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
             </li>
         </ul>
-    </div>
+    </div>-->
 </div>
   <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>-->
 </footer>
