--- a/dev/webdev.html
+++ b/dev/webdev.html
@@ -238,6 +238,7 @@ body, html {
         <p><button class="w3-button w3-black" type="submit">SEND MESSAGE</button></p>
         </form>-->
         <img src="images/card.jpg">
+        <p>Alternatively you can fill in the contact form on this <a href="https://dev-webdevserv.pantheonsite.io">site.</a></p>
       </div>
     </div>
  <!-- // page content -->
