--- a/dev/webdev.html
+++ b/dev/webdev.html
@@ -94,7 +94,7 @@ body, html {
             <p><strong>Opening hours:</strong> everyday from 7.30am to 8pm.</p>
             <p><strong>Location:</strong> Remote projects undertaken.</p>
             <p><strong>Web:</strong> learn more from my <a href="https://webdevserv.github.io/portfolio_idoia">iCodeIdoia portfolio</a>.</p>
-            <p><strong>Apps:</strong>Deployed <a href="<a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-kw723e.streamlit.app" target="_blank">apps via Streamlit</a>.</p>
+            <p><strong>Apps:</strong>Deployed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-kw723e.streamlit.app" target="_blank">apps via Streamlit</a>.</p>
          </div>    
         </div>
 
