--- a/dev/web.html
+++ b/dev/web.html
@@ -68,7 +68,7 @@ body, html {
 <!-- Header -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
  <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-     <span class="w3-tag">Open from 8am to 8pm</span>
+     <span class="w3-tag">Remote working available.</span>
  </div>
  <div class="w3-display-middle w3-center">
      <span class="w3-text-white" style="font-size:90px">the</br>Web developer</span>
@@ -91,10 +91,9 @@ body, html {
             <p>CEO at Gamyte, S.Brett Paterson.</p>
             </div>
             <img src="images/bat.png" style="width:100%;max-width:1000px" class="w3-margin-top">
-            <p><strong>Opening hours:</strong> everyday from 7.30am to 8pm.</p>
             <p><strong>Location:</strong> Remote projects undertaken.</p>
             <p><strong>Web:</strong> learn more from my <a href="https://webdevserv.github.io/portfolio_idoia">iCodeIdoia portfolio</a>.</p>
-            <p><strong>Apps:</strong>Deployed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-kw723e.streamlit.app" target="_blank">apps via Streamlit</a>.</p>
+            <p><strong>Apps:</strong> Deployed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-vsd3ka.streamlit.app/" target="_blank">apps via Streamlit</a>.</p>
          </div>    
         </div>
 
