--- a/dev/web.html
+++ b/dev/web.html
@@ -93,7 +93,7 @@ body, html {
             <img src="images/bat.png" style="width:100%;max-width:1000px" class="w3-margin-top">
             <p><strong>Location:</strong> Remote projects undertaken.</p>
             <p><strong>Web:</strong> learn more from my <a href="https://webdevserv.github.io/portfolio_idoia">iCodeIdoia portfolio</a>.</p>
-            <p><strong>Apps:</strong> Deployed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-vsd3ka.streamlit.app/" target="_blank">apps via Streamlit</a>.</p>
+            <p><strong>Apps:</strong> Deployed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">apps via Streamlit</a>.</p>
          </div>    
         </div>
 
@@ -126,7 +126,7 @@ body, html {
               <li>HTML</li>
               <li>CSS</li>
               <li>Node.js</li>
-              <li><a href="<a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-kw723e.streamlit.app/" target="_blank">Streamlit</a></li>
+              <li><a href="<a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">Streamlit</a></li>
               <li>JavaScript</li>
               <li>AngularJs</li>
               <li>React</li>
@@ -145,7 +145,7 @@ body, html {
         </div>
         <div id="Ski" class="w3-container menu w3-padding-48 w3-card">        
         <h5>I graduated in Artificial Intelligence in London and have always been interested in ML.</h5>
-        <p class="w3-text-grey">Find some <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-vsd3ka.streamlit.app" target="_blank">apps running</a> on Streamlit.</p>
+        <p class="w3-text-grey">Find some <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">apps running</a> on Streamlit.</p>
         <p class="w3-text-grey">Some of the ML projects I have worked on include:
             <ul>
                 <li>Exploring GANs (Generative Adversarial Network) using Google Colab and Jupyter notebooks.</li>
