--- a/dev/web.html
+++ b/dev/web.html
@@ -92,7 +92,7 @@ body, html {
             </div>
             <img src="images/bat.png" style="width:100%;max-width:1000px" class="w3-margin-top">
             <p><strong>Location:</strong> Remote projects undertaken.</p>
-            <p><strong>Web:</strong> learn more from my <a href="https://webdevserv.github.io/portfolio_idoia">iCodeIdoia portfolio</a>.</p>
+            <!--<p><strong>Web:</strong> learn more from my <a href="https://.github.io"></a>.</p>-->
             <p><strong>Apps:</strong> Deployed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">apps via Streamlit</a>.</p>
          </div>    
         </div>
@@ -239,7 +239,7 @@ body, html {
         <p><button class="w3-button w3-black" type="submit">SEND MESSAGE</button></p>
         </form>-->
         <img src="images/card.jpg">
-        <p>Alternatively you can fill in the contact form on this <a href="https://live-webdevserv.pantheonsite.io">site</a>.</p>
+        <p>Alternatively you can fill in the contact form on this <a href="https://live-webdevserv.pantheonsite.io/contact/">site</a>.</p>
       </div>
     </div>
  <!-- // page content -->
@@ -302,4 +302,4 @@ body, html {
     document.getElementById("myLink").click();
 </script>
 </body>
-</html>  
+</html>
