--- a/dev/web.html
+++ b/dev/web.html
@@ -62,6 +62,9 @@ body, html {
     <div class="w3-col s1">
       <a href="#contact" class="w3-button w3-block w3-black">CONTACT</a>
     </div>
+    <div class="w3-col s1">
+      <a href="#blog" class="w3-button w3-block w3-black">BLOG</a>
+    </div>
   </div>
 </div>
 
@@ -229,7 +232,7 @@ body, html {
     <div class="w3-container" id="contact" style="padding-bottom:32px;">
      <div class="w3-content" style="max-width:700px">
         <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">GET IN TOUCH</span></h5>
-        <p>Currently located in New York.</p>      
+        Currently located in New York.</br>    
         <p>If you're interested in working together or have any questions about my work, please don’t hesitate to get in touch.</p>
         <p><strong>Let me know</strong> if you are interested in receiving my resume and we can talk soon.</p>
        <!-- <form action="mailto:private007@lineone.net" method="get" enctype="text/plain">
@@ -238,10 +241,40 @@ body, html {
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
         <p><button class="w3-button w3-black" type="submit">SEND MESSAGE</button></p>
         </form>-->
+        <p>Alternatively you can fill in the contact form on this <a href="https://live-webdevserv.pantheonsite.io/contact/">site</a>.</p>   
         <img src="images/card.jpg">
-        <p>Alternatively you can fill in the contact form on this <a href="https://live-webdevserv.pantheonsite.io/contact/">site</a>.</p>
       </div>
     </div>
+
+
+     <!-- Blog -->
+     <div class="w3-container" id="blog" style="padding-bottom:32px;">
+      <div class="w3-content" style="max-width:700px">
+         <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">BLOG: "Photo restoration using AI and GIMP"</span></h5>
+         The following will show how to restore photographs keeping the essence of the original photograph. Using AI sometimes add spurious results like adding make-up etc. and in this exercise the aim is to keep the spirit of the original photograph. </br>      
+         <OL>
+          <li>Remove the background of the original image online. <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
+          <br/><img src="assets/500one1.jpg"></li>
+          <li>Create a new background using Stable Diffusion online. <a href="www.playground ai" target="_blank">www.plaground.ai (FREE)</a>
+          <br/><img src="assets/500two2.jpg">
+          </li>
+          <li>Merge the two pictures Using a graphic design application, I used GIMP.
+          <br/><img src="assets/500three3.jpg">
+          </li>
+          <li>Import the new created picture to Stable Diffusion online and pass at 95 or higher.
+          <br/>  <img src="assets/500four4.jpg">
+          </li>
+          <li>Use inpaint in the Stable Diffusion app to fix the edges of the photograph and edit if needed.
+          <br/><img src="assets/500five5.jpg">
+          </li>
+          <li>You have created a beautiful restored photograph that keeps the essence of the individuals in the original photo. Thank you for following up.
+          <br/><img src="assets/600six6.jpg">
+          </li>
+          </OL>
+        
+         <p><strong>Well done.</strong></p>
+       </div>
+     </div>
  <!-- // page content -->
 </div>
 
