--- a/dev/web.html
+++ b/dev/web.html
@@ -253,26 +253,26 @@ body, html {
          <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">BLOG: "Photo restoration using AI and GIMP"</span></h5>
          The following will show how to restore photographs keeping the essence of the original photograph. Using AI sometimes add spurious results like adding make-up etc. and in this exercise the aim is to keep the spirit of the original photograph. </br>      
          <OL>
-          <li>Remove the background of the original image online. <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
+          <li>Remove the background of the original image online with <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
           <br/><img src="assets/500one1.jpg"></li>
-          <li>Create a new background using Stable Diffusion online. <a href="www.playground ai" target="_blank">www.plaground.ai (FREE)</a>
+          <li>Create a new background using Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
           <br/><img src="assets/500two2.jpg">
           </li>
-          <li>Merge the two pictures Using a graphic design application, I used GIMP.
+          <li>Merge the two images with a graphic design application, I used GIMP.
           <br/><img src="assets/500three3.jpg">
           </li>
-          <li>Import the new created picture to Stable Diffusion online and pass at 95 or higher.
+          <li>Import the new created picture to Stable Diffusion online and pass at 95 or higher image strength.
           <br/>  <img src="assets/500four4.jpg">
           </li>
           <li>Use inpaint in the Stable Diffusion app to fix the edges of the photograph and edit if needed.
           <br/><img src="assets/500five5.jpg">
           </li>
-          <li>You have created a beautiful restored photograph that keeps the essence of the individuals in the original photo. Thank you for following up.
+          <li>You have created a beautiful restored photograph that keeps the essence of the individuals in the original photo. 
           <br/><img src="assets/600six6.jpg">
           </li>
           </OL>
         
-         <p><strong>Well done.</strong></p>
+         <p><strong>Well done!</strong></p>
        </div>
      </div>
  <!-- // page content -->
