--- a/dev/web.html
+++ b/dev/web.html
@@ -254,7 +254,7 @@ body, html {
          The following will show how to restore photographs keeping the essence of the original photograph. Using AI sometimes add spurious results like adding make-up etc. and in this exercise the aim is to keep the spirit of the original photograph. </br>      
          <OL>
           <li>Remove the background of the original image online with <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
-          <br/><img src="tutotorial_img/500one1.jpg"></li>
+          <br/><img src="tutorial_img/500one1.jpg"></li>
           <li>Create a new background using Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
           <br/><img src="tutorial_img/500two2.jpg">
           </li>
