--- a/dev/web.html
+++ b/dev/web.html
@@ -250,28 +250,21 @@ body, html {
      <!-- Blog -->
      <div class="w3-container" id="blog" style="padding-bottom:32px;">
       <div class="w3-content" style="max-width:700px">
-         <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">BLOG: "Photo restoration using AI and GIMP"</span></h5>
-         The following will show how to restore photographs keeping the essence of the original photograph. Using AI sometimes add spurious results like adding make-up etc. and in this exercise the aim is to keep the spirit of the original photograph. </br>      
+         <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">BLOG: "Photo restoration using AI +  GIMP"</span></h5>
+         Learn how to restore photographs while keeping their original essence. AI sometimes adds spurious results like adding make-up etc. and in this exercise we aim to preserve the spirit of the original photograph.</br>      
          <OL>
           <li>Remove the background of the original image online with <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
           <br/><img src="tutorial_img/500one1.jpg"></li>
-          <li>Create a new background using Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
-          <br/><img src="tutorial_img/500two2.jpg">
-          </li>
+          <li>Create a new background using AI Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
+          <br/><img src="tutorial_img/500two2.jpg"></li>
           <li>Merge the two images with a graphic design application, I used GIMP.
-          <br/><img src="tutorial_img/500three3.jpg">
-          </li>
-          <li>Import the new created picture to Stable Diffusion online and pass at 95 or higher image strength.
-          <br/>  <img src="tutorial_img/500four4.jpg">
-          </li>
+          <br/><img src="tutorial_img/500three3.jpg"></li>
+          <li>Import the new created picture to Stable Diffusion online and pass at 95 or higher image strength.</li>         
           <li>Use inpaint in the Stable Diffusion app to fix the edges of the photograph and edit if needed.
-          <br/><img src="tutorial_img/500five5.jpg">
-          </li>
+            <br/><img src="tutorial_img/500four4.jpg">
           <li>You have created a beautiful restored photograph that keeps the essence of the individuals in the original photo. 
-          <br/><img src="tutorial_img/600six6.jpg">
-          </li>
-          </OL>
-        
+          <br/><img src="tutorial_img/600six6.jpg"></li>
+          </OL>        
          <p><strong>Well done!</strong></p>
        </div>
      </div>
