--- a/dev/web.html
+++ b/dev/web.html
@@ -255,11 +255,11 @@ body, html {
          <OL>
           <li>Remove the background of the original image online with <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
           <br/><img src="tutorial_img/500one1.jpg"></li>
-          <li>Create a new background using AI Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
+          <li>Import the image and create a new background you like using AI Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
           <br/><img src="tutorial_img/500two2.jpg"></li>
           <li>Merge the two images with a graphic design application, I used GIMP.
           <br/><img src="tutorial_img/500three3.jpg"></li>
-          <li>Import the new created picture to Stable Diffusion online and pass at 95 or higher image strength.</li>         
+          <li>Import the new created photograph to Stable Diffusion online and pass at 95 or higher image strength.</li>         
           <li>Use inpaint in the Stable Diffusion app to fix the edges of the photograph and edit if needed.
             <br/><img src="tutorial_img/500four4.jpg">
           <li>You have created a beautiful restored photograph that keeps the essence of the individuals in the original photo. 
