--- a/dev/web.html
+++ b/dev/web.html
@@ -109,7 +109,7 @@ body, html {
                 <div class="w3-col s6 tablink">Experience</div>
             </a>
             <a href="javascript:void(0)" onclick="openMenu(event, 'Ski');">
-                <div class="w3-col s6 tablink">ML interest</div>
+                <div class="w3-col s6 tablink">ML focus</div>
             </a>
         </div>
         <div id="Exp" class="w3-container menu w3-padding-48 w3-card">       
@@ -129,7 +129,7 @@ body, html {
               <li>HTML</li>
               <li>CSS</li>
               <li>Node.js</li>
-              <li><a href="<a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">Streamlit</a></li>
+              <li><a href="<a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">Streamlit</a></li>
               <li>JavaScript</li>
               <li>AngularJs</li>
               <li>React</li>
@@ -137,6 +137,9 @@ body, html {
               <li>Figma</li>
               <li>Adobe</li>
               <li>Video</li>
+              <li><a href=""https://www.kaggle.com/code/idoial/is-it-a-portrait-1st-model-from-my-data" target="_blank">Kaggle</a></li>
+              <li>Jupyter notebook</li>
+              <li>Google colab</li>
               <li>SD</li>
               <li>ML</li>
               <li>Java</li>
@@ -151,13 +154,16 @@ body, html {
         <p class="w3-text-grey">Find some <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">apps running</a> on Streamlit.</p>
         <p class="w3-text-grey">Some of the ML projects I have worked on include:
             <ul>
+                <li>Fastai ML Model in Kaggle: <a href="https://www.kaggle.com/code/idoial/is-it-a-portrait-1st-model-from-my-data" target="_blank">Is it a portrait?</a> 1st Model from my data</li>
                 <li>Exploring GANs (Generative Adversarial Network) using Google Colab and Jupyter notebooks.</li>
                 <li>Building interactive web apps with Python and Streamlit to showcase ML models.</li>  
                 <li>Data analysis with panda.</li>  
-                <li>Google colab file creation.</li>         
+                <li>Google colab</li>
+                <li>Julyter notebook</li>            
                 <li>CV2 face detection, face swapping on live camera feed.</li>
-                <li>Openseadragon image viewer using Microsoft deep zoom image format.</li>
-                <li>Stable diffusion image generation, artstation.</li>
+                <li>Video interpolations of latent mappings, from one image to the next, Nvdia Style GAN 2.</li>
+                <li>Implemented github openseadragon image viewer using Microsoft deep zoom image format in Streamlit app.</li>
+                <li>Stable diffusion image generation, freelanced on a book imagery creation, artstation.</li>
                 <li>Video interpolations of latent mappings, from one image to the next, Nvdia Style GAN 2.</li>
                 <li>Kaggle, I have Kaggle account and I like to work on competitions when time permits.</li>
             </ul>
