--- a/restaurant/faq.html
+++ b/restaurant/faq.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="HTML, CSS, JS"/>
-        <meta name="description" content="Domací asijské bistro - zažij chuť Asie na okraji Prahy!"/>
-        <meta name="author" content="David Poslušný"/>
+        <meta name="description" content="Bistro"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles.css" rel="stylesheet" type="text/css" media="screen"/>
         <link href="print.css" rel="stylesheet" type="text/css" media="print"/>
