--- a/dev/web.html
+++ b/dev/web.html
@@ -138,6 +138,8 @@ body, html {
               <li>Figma</li>
               <li>Adobe</li>
               <li>Video</li>
+              <li>cv2</li>
+              <li>fastai</li>
               <li><a href="https://www.kaggle.com/code/idoial/is-it-a-portrait-1st-model-from-my-data" target="_blank">Kaggle</a></li>
               <li>Jupyter notebook</li>
               <li>Google colab</li>
@@ -248,7 +250,9 @@ body, html {
             </div>
         </div>
         <div><img src="images/portrait_or_street.jpg">
-        </br>AI image detector output (Kaggle). Is it a portrait or a street photograph?</div>   
+        </br>AI image detector output (Kaggle). Is it a portrait or a street photograph?</div>
+        <div><img src="images/virtual_or_real.jpg">
+        </br>AI image classification web app with model/dataset.<a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this a Virtual Staging image or real?</a></div>
       </div> 
     </div>    
 
