--- a/dev/web.html
+++ b/dev/web.html
@@ -250,9 +250,9 @@ body, html {
             </div>
         </div>
         <div><img src="images/portrait_or_street.jpg">
-        </br>AI image detector output (Kaggle). Is it a portrait or a street photograph?</div>
-        <div><img src="images/virtual_or_real.jpg">
-        </br>AI image classification web app with model/dataset.<a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this a Virtual Staging image or real?</a></div>
+        </br>AI image detector (Kaggle). Is it a portrait or a street photograph?</div>
+        <div><img src="images/virtual_or_real.jpg" width="400" height="286">
+        </br>AI image classification web app with model/dataset Hugging Face.<a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this a Virtual Staging image or real?</a></div>
       </div> 
     </div>    
 
