--- a/dev/web.html
+++ b/dev/web.html
@@ -145,6 +145,7 @@ body, html {
               <li>Google colab</li>
               <li>Streamlit</li>
               <li>Hugging Face</li>
+              <li>github</li>
               <li>Gradio</li>
               <li>Kaggle</li>
               <li>model</li>
