--- a/dev/web.html
+++ b/dev/web.html
@@ -74,7 +74,7 @@ body, html {
      <span class="w3-tag">Remote working available.</span>
  </div>
  <div class="w3-display-middle w3-center">
-     <span class="w3-text-white" style="font-size:90px">the</br>Web developer/Machine Learning engineer</span>
+     <span class="w3-text-white" style="font-size:90px">the</br>Web/ML Developer</span>
  </div>
  <div class="w3-display-bottomright w3-center w3-padding-large">
      <span class="w3-text-white">SD 1.5</span>
