--- a/dev/IAdogs.html
+++ b/dev/IAdogs.html
@@ -96,6 +96,10 @@ body, html {
       <strong>Ez da erreplika zehatza izango, baina zuk bidalitako inspirazio bat izango da.</strong><br/>
       <center><img src="mod_img/dogs.png"/></center>    
       <center><img src="mod_img/m1.png"/></center>    
+      <center><img src="mod_img/frenchie1.jpg"/></center>  
+      <center><img src="mod_img/frenchie2.jpg"/></center>  
+      <center><img src="mod_img/frenchie3.jpg"/></center>  
+      <center><img src="mod_img/frenchie4.jpg"/></center>    
       </div>
     </div>
 
