--- a/dev/web.html
+++ b/dev/web.html
@@ -164,6 +164,7 @@ body, html {
         <p class="w3-text-grey">Find some apps running on Streamlit.
         <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">web apps via Streamlit</a>.</p>
         <p>ML web app deployed in Huggin Face (includes model/dataset).<a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this virtual staging or is it real?</a></p>
+        <p>Discord channel displaying <a href="  https://discord.gg/jhrBtDDX" target="_blank">Stable Diffusion imagery creations</a> by me.</p>
         <p class="w3-text-grey">Some of the ML projects I have worked on include:
             <ul>
                 <li>Fastai Image detector ML Model in Kaggle: <a href="https://www.kaggle.com/code/idoial/is-it-a-portrait-1st-model-from-my-data" target="_blank">Is it a portrait?</a> 1st Model from my data</li>
