--- a/dev/web.html
+++ b/dev/web.html
@@ -97,7 +97,10 @@ body, html {
             <p><strong>Location:</strong> Projects undertaken. Consult for availability.</p>
             <!--<p><strong>Web:</strong> learn more from my <a href="https://.github.io"></a>.</p>-->
             <p><strong>Web apps:</strong><ul><li> Developed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">web apps via Streamlit</a>.</li>
-              <li>Developed ML web app via Hugging Face: <a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this virtual staging or is it real?</a></li></ul></p>
+              <li>Developed ML web app via Hugging Face: <a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this virtual staging or is it real?</a></li>
+              <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Developed discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
+              <li><a href="https://medium.com/@artGen101/ai-imagery-photo-editing-37cf3810b1b2" target="_blank">Medium write up on AI imagery restauration with GIMP.</a></li>
+            </ul></p>
          </div>    
         </div>
 
