--- a/dev/web.html
+++ b/dev/web.html
@@ -107,10 +107,12 @@
                 <!--<p><strong>Web:</strong> learn more from my <a href="https://.github.io"></a>.</p>-->
                 <p><strong>Web apps:</strong>
                     <ul>
-                        <li>Developed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">web apps via Streamlit</a>.</li>
+                        <li>Developed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">ML web apps via Streamlit</a>.</li>
                         <li>Developed ML web app via Hugging Face: <a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this virtual staging or is it real?</a></li>
-                        <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
+                        <li><a href="https://webdevserv.github.io/html_bites/dev/blog/classifier_portrait.html" target="_blank">Jupyter Notebook/Google colab</a> Image Classification web app, is it a portrait?</li>
+
                         <li>Blog @ <a href="https://medium.com/@artGen101/ai-imagery-photo-editing-37cf3810b1b2" target="_blank">Medium: AI imagery restauration with GIMP.</a></li>
+                        <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
                     </ul>
                 </p>
             </div>
