--- a/dev/web.html
+++ b/dev/web.html
@@ -115,9 +115,9 @@
                         </li>
                         <li>Blog @ Medium:
                             <ul>
-                                <li><a href="https://medium.com/@artGen101/ai-imagery-photo-editing-37cf3810b1b2" target="_blank">Medium: AI imagery restauration with GIMP.</a></li>
+                                <li><a href="https://medium.com/@artGen101/ai-imagery-photo-editing-37cf3810b1b2" target="_blank">Medium: AI imagery restauration with GIMP + Stable Diffusion.</a></li>
                                 <li>
-                                    <a href="https://medium.com/@artGen101/easy-ai-classifier-is-it-a-portrait-or-a-street-photo-821f55d2c3af" target="_blank"></li>
+                                    <a href="https://medium.com/@artGen101/easy-ai-classifier-is-it-a-portrait-or-a-street-photo-821f55d2c3af" target="_blank">Easy AI Image Classifier: Is it a portrait? Google Colab/Jupyter notebook</a></li>
                             </ul>
                         </li>
                         <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
